# Tartan2026

./: .gitignore  AI_Health_Concierge_PRD.md  BLUEPRINT.md  CAREPILOT_IMPLEMENTATION_PLAN.md  CAREPILOT_PRODUCT_DESCRIPTION.md  CAREPILOT_TECHNICAL_DESIGN.md  CHATBOT_BENCHMARK_RESULTS.json  CHATBOT_E2E_SMOKE_REPORT.md  COMPLIANCE_LAUNCH_CHECKLIST.md  CarePilot - Your Personal AI Family Doctor Assistant.pptx  EULA.txt  IMPLEMENTATION_PLAN.md  MEMORY_IMPLEMENTATION_HACKATHON.md  MIGRATION_STATUS.md  MVP_FEATURE_IMPLEMENTATION_PLAN.md  ONBOARDING_PROCESS_SPEC.md  OPENCLAW_REUSE_MAP.md  PRODUCT_DETAIL.md  README.md  TECH_DOC.md  docker-compose.yml  doctor_agent_hackathon_strategy_and_openclaw_reuse.md  package-lock.json  package.json  pnpm-lock.yaml  prompt.md  render.yaml  tailwind.config.ts
backend/: .env.example  Dockerfile  carepilot.sqlite  main.py  pyproject.toml  requirements.txt
backend/carepilot_agent_core/: __init__.py  executor.py  hooks.py  lifecycle.py  models.py  policy.py  registry.py
backend/carepilot_tools/: __init__.py  core_tools.py  web_automation.py  web_discovery.py
backend/memory/: __init__.py  clinical_store.py  conversation_store.py  database.py  memory_policy_guard.py  service.py  temporal_lifecycle.py  time_utils.py
backend/tests/: conftest.py  sse_utils.py  test_chat_continuity.py  test_chat_memory_functionality.py  test_document_analysis.py  test_document_scoping.py  test_lab_discovery_web_pipeline.py  test_lifecycle_and_consent.py  test_safety_memory_scoping.py  test_temporal_and_sse_contract.py  test_voice_transcription.py  (+1 more)
(+198 files in other folders)
