[project]
name = "medclaw-backend"
version = "0.1.0"
description = "MedClaw stub backend"
requires-python = ">=3.10"
dependencies = [
  "fastapi==0.112.2",
  "uvicorn[standard]==0.30.6",
  "pydantic==2.9.2",
  "python-dotenv==1.0.1",
  "httpx==0.27.2"
]

[project.optional-dependencies]
test = [
  "pytest==8.3.4",
  "pytest-cov==6.0.0"
]

[tool.uv]
package = false

[tool.pytest.ini_options]
addopts = "-ra"
testpaths = ["tests"]
